alignment fixes

--- a/src/components/layout/header.scss
+++ b/src/components/layout/header.scss
@@ -12,7 +12,7 @@
   background-color: #1a1f24;
 
   @media screen and (max-width: 400px) {
-    height: 13.5vh;
+    height: 13.8vh;
   }
 
   @media screen and (min-width: 273px) and (max-width: 360px) {
@@ -223,6 +223,8 @@ input {
 
 .logo-mobile {
   margin-left: 20px !important;
+  margin-top: 8px !important;
+  padding-bottom: 8px !important;
 }
 
 .swipeable-drawer-mobile {
