--- a/src/components/theTeam.scss
+++ b/src/components/theTeam.scss
@@ -119,3 +119,9 @@
     }
   }
 }
+
+.team-member-mihailo {
+  @media screen and (max-width: 992px) {
+    margin-bottom: 50px;
+  }
+}
